ci: build fact branch to github pages

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,9 +2,9 @@ name: Pages
 
 on:
   push:
-    branches: [ master ]
+    branches: [ fact ]
   pull_request:
-    branches: [ master ]
+    branches: [ fact ]
 
 jobs:
   build-and-deploy:
