ci: fix GITHUB_TOKEN

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,4 +26,4 @@ jobs:
       with:
         build_dir: dist/demo
       env:
-        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
